[Releng] Regenerate JREs for new Java 11, 17, and 18 releases
Also remove older non-LTS versions.